# dlv

./: .dockerignore  .gitignore  .golangci.yml  .pre-commit-config.yaml  .pre-commit-setup.md  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.binary  Dockerfile.dev  HELM_CHART_SUMMARY.md  LICENSE  Makefile  PLAN.md  README-DEV.md  README.md  dev-start.sh  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum  package-lock.json  package.json  run-migrations.sh  test-enhanced-dashboard.sh
.cursor/rules/: fastapi.mdc  go.mdc  react.mdc
.github/workflows/: cd.yml  ci.yml  lint.yml  release.yml  test.yml
backend/: .dockerignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
backend/app/: security.py
backend/app/api/routes/: auth.py  dashboards.py  lineage.py  nodes.py
backend/app/connectors/: __init__.py  airflow.py  postgres.py  rest_api.py
backend/app/core/: config.py  database.py  neo4j.py
backend/app/models/: dashboard.py  lineage.py  node.py  user.py
backend/app/schemas/: auth.py  dashboard.py  lineage.py  node.py  user.py
charts/dlv/: Chart.yaml  values.yaml
charts/dlv/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
charts/realtime-lineage/: Chart.yaml  values.yaml
charts/realtime-lineage/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
cmd/server/: main.go
docs/: architecture.md  ci-cd.md  configuration.md  docker-registry.md  features.md  getting-started.md  helm-chart-guide.md  setup-go.md
docs/release/: v1.0.0.md
examples/airflow-lineage/: values.yaml
examples/multi-cluster/: values.yaml
examples/spark-lineage/: values.yaml
internal/api/: auth_handlers.go  auth_routes.go  hub.go  routes.go  websocket.go
internal/auth/: auth.go
internal/collector/: collector.go  spark.go
internal/middleware/: auth_middleware.go
internal/processor/: processor.go
internal/repository/: user_repository.go
pkg/database/: db.go
pkg/database/migrations/: 001_create_users.sql  003_create_data_sources.sql  004_add_unique_constraint_data_sources.sql
pkg/graph/: client.go
pkg/handlers/: source_handler.go
pkg/models/: source.go  user.go
pkg/services/: source_service.go
sample/nodes/airflow/: docker-compose.yaml
ui/: .dockerignore  Dockerfile  Dockerfile.dev  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.css  App.tsx  main.tsx
ui/src/api/: client.ts
ui/src/components/: DashboardManager.css  DashboardManager.tsx  FilterPanel.css  FilterPanel.tsx  GraphVisualization.css  GraphVisualization.tsx  Header.css  Header.tsx  Layout.css  Layout.tsx  LoadingSkeleton.css  LoadingSkeleton.tsx  MetricsPanel.css  MetricsPanel.tsx  NodeDetailsPanel.css  NodeDetailsPanel.tsx  Protected.tsx  Sidebar.css  Sidebar.tsx  SourceCard.css  SourceCard.tsx
ui/src/components/dashboard/: DashboardEditor.tsx  DashboardList.tsx  DashboardViewer.tsx  NodesCatalog.tsx
ui/src/components/edges/: CustomEdge.tsx  EdgeComponents.css
ui/src/components/layout/: AppLayout.tsx
ui/src/components/nodes/: AirflowNode.tsx  DatabaseNode.tsx  KafkaNode.tsx  NodeComponents.css  NodesList.tsx  NodesModal.tsx  SparkNode.tsx
ui/src/lib/: auth.ts  nodeTypes.ts
ui/src/pages/: AddSource.css  AddSource.tsx  Dashboard.css  Dashboard.tsx  Dashboards.tsx  Lineage.tsx  LineageView.css  LineageView.tsx  Login.tsx  LoginPage.css  LoginPage.tsx  NodeDetails.css  NodeDetails.tsx  Nodes.tsx  PipelineIntegration.css  PipelineIntegration.tsx  SearchPage.css  SearchPage.tsx
ui/src/styles/: global.css  theme.css
ui/src/types/: index.ts
